--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,42 +11,40 @@ author_profile: true
 
 {% include base_path %}
 
-<p><strong>Journal Article</strong></p>
-<ol reversed>
-  <li>Diaz, B., Chen, G., Delgado, C., and Jaselskis, E. (2025). 
-    <a href="URL_FOR_J9" target="_blank">“Supporting Generative AI Literacy: Exploring the Pedagogical Roles Students Assign ChatGPT and Impact on Course Grades.”</a> 
-    Comunicar (Accepted).
+<h2><strong>Journal Article</strong></h2>
+<ol class="bracket-list" reversed>
+  <li>Diaz, B., <strong>Chen, G.</strong>, Delgado, C., and Jaselskis, E. (2025). “Supporting Generative AI Literacy: Exploring the Pedagogical Roles Students Assign ChatGPT and Impact on Course Grades.” Comunicar (Accepted).
   </li>
-  <li>Shafaay, M., Alqahtani, F. K., Alsharef, A., and Chen, G. (2025). 
+  <li>Shafaay, M., Alqahtani, F. K., Alsharef, A., and <strong>Chen, G.</strong> (2025). 
     <a href="https://doi.org/10.1080/13467581.2025.2481242" target="_blank">Modeling construction cost overrun risks at the FEED stage for mining projects using PLS-SEM.</a> 
     Journal of Asian Architecture and Building Engineering, 1–17.
   </li>
-  <li>Chen, G., Alsharef, A., Ovid, A., Albert, A., and Jaselskis, E. (2025). 
+  <li><strong>Chen, G.</strong>, Alsharef, A., Ovid, A., Albert, A., and Jaselskis, E. (2025). 
     <a href="https://doi.org/10.1016/j.aei.2024.103068" target="_blank">“Meet2Mitigate: An LLM-powered framework for real-time issue identification and mitigation from construction meeting discourse.”</a> 
     Advanced Engineering Informatics, 64: 103068.
   </li>
-  <li>Chen, G., Alsharef, A., and Jaselskis, E. (2024). 
+  <li><strong>Chen, G.</strong>, Alsharef, A., and Jaselskis, E. (2024). 
     <a href="https://doi.org/10.3390/s24206603" target="_blank">“Construction Jobsite Image Classification Using an Edge Computing Framework.”</a> 
     Sensors, 24 (20): 6603.
   </li>
-  <li>Chen, G., M. Liu, H. Li, S. M. Hsiang, and A. Jarvamard. (2023). 
-    <a href="URL_FOR_J5" target="_blank">“Motivating Reliable Collaboration for Modular Construction – A Shapley Value-Based Smart Contract.”</a> 
+  <li><strong>Chen, G.</strong>, M. Liu, H. Li, S. M. Hsiang, and A. Jarvamard. (2023). 
+    <a href="https://doi.org/10.1061/JMENEA.MEENG-5428" target="_blank">“Motivating Reliable Collaboration for Modular Construction – A Shapley Value-Based Smart Contract.”</a> 
     Journal of Management in Engineering, 39 (6): 04023042. (Editor’s Choice)
   </li>
-  <li>Chen, G., M. Liu, Y. Zhang, Z. Wang, S. M. Hsiang, and C. He. (2023). 
-    <a href="URL_FOR_J4" target="_blank">“Using Images to Detect, Plan, Analyze, and Coordinate a Smart Contract in Construction.”</a> 
+  <li><strong>Chen, G.</strong>, M. Liu, Y. Zhang, Z. Wang, S. M. Hsiang, and C. He. (2023). 
+    <a href="https://doi.org/10.1061/JMENEA.MEENG-5121" target="_blank">“Using Images to Detect, Plan, Analyze, and Coordinate a Smart Contract in Construction.”</a> 
     Journal of Management in Engineering, 39 (2): 1–18.
   </li>
-  <li>He, C., M. Liu, Y. Zhang, Z. Wang, S. M. Hsiang, G. Chen, W. Li, and G. Dai. (2023). 
-    <a href="URL_FOR_J3" target="_blank">“Space-Time-Workforce Visualization and Conditional Capacity Synthesis in Uncertainty.”</a> 
+  <li>He, C., M. Liu, Y. Zhang, Z. Wang, S. M. Hsiang, <strong>Chen, G.</strong>, W. Li, and G. Dai. (2023). 
+    <a href="https://doi.org/10.1061/JMENEA.MEENG-4991" target="_blank">“Space-Time-Workforce Visualization and Conditional Capacity Synthesis in Uncertainty.”</a> 
     Journal of Management in Engineering, 39 (2): 04022071.
   </li>
-  <li>Chen, G., H. Li, M. Liu, S. M. Hsiang, and A. Javanmardi. (2022). 
-    <a href="URL_FOR_J2" target="_blank">“Knowing what is going on – a smart contract for modular construction.”</a> 
+  <li><strong>Chen, G.</strong>, H. Li, M. Liu, S. M. Hsiang, and A. Javanmardi. (2022). 
+    <a href="https://doi.org/10.1139/cjce-2021-0649" target="_blank">“Knowing what is going on – a smart contract for modular construction.”</a> 
     Canadian Journal of Civil Engineering, 50 (3): 210–223. (Invited paper)
   </li>
-  <li>He, C., M. Liu, Y. Zhang, Z. Wang, S. M. Hsiang, G. Chen, and J. Chen. (2022). 
-    <a href="URL_FOR_J1" target="_blank">“Exploit Social Distancing in Construction Scheduling: Visualize and Optimize Space–Time–Workforce Tradeoff.”</a> 
+  <li>He, C., M. Liu, Y. Zhang, Z. Wang, S. M. Hsiang, <strong>Chen, G.</strong>, and J. Chen. (2022). 
+    <a href="https://doi.org/10.1061/(ASCE)ME.1943-5479.0001037" target="_blank">“Exploit Social Distancing in Construction Scheduling: Visualize and Optimize Space–Time–Workforce Tradeoff.”</a> 
     Journal of Management in Engineering, 38 (4): 1–15.
   </li>
 </ol>
