--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -54,20 +54,20 @@ author_profile: true
 
 <h2>Conference Article</h2>
 <ol reversed>
-  <li>Chen, G., Pedraza, M., Albaloul, R., Albert, A., and Jaselskis, E. (2025). “Developing a Fit-for-Purpose Best Practice Knowledge Handbook using Generative AI.” CSCE Construction Specialty Conference / ASCE Construction Research Congress (CRC) 2025.
+  <li><strong>Chen, G.</strong>, Pedraza, M., Albaloul, R., Albert, A., and Jaselskis, E. (2025). “Developing a Fit-for-Purpose Best Practice Knowledge Handbook using Generative AI.” CSCE Construction Specialty Conference / ASCE Construction Research Congress (CRC) 2025.
   </li>
-  <li>Chen, G., and Liu, Y. (2025). “Leveraging Large Language Models for Voice-Activated Robotic Teleoperation in Construction.” ASCE International Conference on Computing in Civil Engineering 2025.
+  <li><strong>Chen, G.</strong>, and Liu, Y. (2025). “Leveraging Large Language Models for Voice-Activated Robotic Teleoperation in Construction.” ASCE International Conference on Computing in Civil Engineering 2025.
   </li>
-  <li>Mapare, V., Liu, Y., Zheng, D., and Chen, G. (2025). “Enhancing the Worker-Robot Interaction for Construction Task Operation: A Preliminary Study Using Large Language Model-based Methods.” ASCE International Conference on Computing in Civil Engineering 2025.
+  <li>Mapare, V., Liu, Y., Zheng, D., and <strong>Chen, G.</strong> (2025). “Enhancing the Worker-Robot Interaction for Construction Task Operation: A Preliminary Study Using Large Language Model-based Methods.” ASCE International Conference on Computing in Civil Engineering 2025.
   </li>
-  <li>Chen, G., Alsharef, A., and Jaselskis, E. (2024). “Enabling Real-Time AI Applications in Construction Site Safety: A Novel Edge Computing Approach for Nails Detection Under Resource-Constrained Environment.” ASCE International Conference on Computing in Civil Engineering 2024.
+  <li><strong>Chen, G.</strong>, Alsharef, A., and Jaselskis, E. (2024). “Enabling Real-Time AI Applications in Construction Site Safety: A Novel Edge Computing Approach for Nails Detection Under Resource-Constrained Environment.” ASCE International Conference on Computing in Civil Engineering 2024.
   </li>
-  <li>Chen, G., Alsharef, A., and Jaselskis, E. (2024). “Integrating Sensor-Empowered Federated Learning and Smart Contracts for Automatic Sustainable Infrastructure Management.” ASCE International Conference on Computing in Civil Engineering 2024.
+  <li><strong>Chen, G.</strong>, Alsharef, A., and Jaselskis, E. (2024). “Integrating Sensor-Empowered Federated Learning and Smart Contracts for Automatic Sustainable Infrastructure Management.” ASCE International Conference on Computing in Civil Engineering 2024.
   </li>
-  <li>. Chen, G., C. He, S. Hsiang, M. Liu, and H. Li. (2023). “A mechanism for smart contracts to mediate production bottlenecks under constraints.” 31st Annual Conference of the International Group for Lean Construction (IGLC). Lille, France. 
+  <li><strong>Chen, G.</strong>, C. He, S. Hsiang, M. Liu, and H. Li. (2023). “A mechanism for smart contracts to mediate production bottlenecks under constraints.” 31st Annual Conference of the International Group for Lean Construction (IGLC). Lille, France. 
   </li>
-  <li>Li, H., G. Chen, M. Liu, S. M. Hsiang, and A. Jarvamardi. (2023). “Situation awareness based smart contract for modular construction.” Proceedings of the Canadian Society of Civil Engineering Annual Conference 2021, 363–373. Singapore: Springer Nature Singapore. (Best Student Paper for Awardee: Gongfan Chen).
+  <li>Li, H., <strong>Chen, G.</strong>, M. Liu, S. M. Hsiang, and A. Jarvamardi. (2023). “Situation awareness based smart contract for modular construction.” Proceedings of the Canadian Society of Civil Engineering Annual Conference 2021, 363–373. Singapore: Springer Nature Singapore. (Best Student Paper for Awardee: Gongfan Chen).
   </li>
-  <li>He, C., M. Liu, Z. Wang, G. Chen, Y. Zhang, and S. M. Hsiang. (2022). “Facilitating Smart Contract in Project Scheduling under Uncertainty—A Choquet Integral Approach.” Construction Research Congress 2022, 930–939.
+  <li>He, C., M. Liu, Z. Wang, <strong>Chen, G.</strong>, Y. Zhang, and S. M. Hsiang. (2022). “Facilitating Smart Contract in Project Scheduling under Uncertainty—A Choquet Integral Approach.” Construction Research Congress 2022, 930–939.
   </li>
 </ol>
