--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,7 +13,7 @@ author_profile: true
 
 <h2>Journal Article</h2>
 <ol reversed>
-  <li><strong>Chen, G.</strong>, Jaselskis, E., Tamer, A., and Folz, A., (2025). “Using a Large Language Model Powered Framework for Automatic Risk Identification and Mitigation from Past Claims and Supplemental Agreements.” Journal of Computing in Civil Engineering (Under Review).
+  <li><strong>Chen, G.</strong>, Jaselskis, E., Tamer, A., and Folz, A., (2025). “Using a Large Language Model Powered Framework for Automatic Risk Identification and Mitigation from Past Claims and Supplemental Agreements.” Journal of Computing in Civil Engineering (In Revision).
   </li>
   <li>Diaz, B., <strong>Chen, G.</strong>, Delgado, C., and Jaselskis, E. (2025). “Supporting Generative AI Literacy: Exploring the Pedagogical Roles Students Assign ChatGPT and Impact on Course Grades.” Comunicar (Accepted).
   </li>
